syntax = "proto3";

option csharp_namespace = "LiveWire.IncomingCall";

message CallingEventRequest {
    string client_id = 1;
}

message CallingEventResponse {
    EventType event_type = 1;
    string call_id = 2;
    optional CallConnectionState call_connection_state = 3;
    optional DtmfTone DtmfTone = 4;
}

enum EventType {
    INCOMING_CALL = 0;
    CALL_CONNECTION = 1;
    DTMF_TONE = 2;
    PLAY_MEDIA = 3;
}

enum CallConnectionState {
    CONNECTING = 0;
    CONNECTED = 1;
    DISCONNECTED = 2;
    DISCONNECTING = 3;
    TRANSFERRING = 4;
    TRANSFERRED = 5;
    DEFAULT = 6;
}

enum DtmfTone {
    TONE0 = 0;
    TONE1 = 1;
    TONE2 = 2;
    TONE3 = 3;
    TONE4 = 4;
    TONE5 = 5;
    TONE6 = 6;
    TONE7 = 7;
    TONE8 = 8;
    TONE9 = 9;
}

service IncomingCall {
    rpc Register(stream CallingEventRequest) returns (stream CallingEventResponse);
}